<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright(C) 2011 - Hamming Bookmarks
	The sample demo app for hamsterdb.

	@author DUMAPIC
	@version 1.0.0
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<include layout="@layout/parts_main_actionbar"/>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbarStyle="outsideInset"
		android:fillViewport="true">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:orientation="vertical">
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:text="@string/caption_label_additem_title"
			/>
			<EditText
				android:id="@+id/txt_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="false"
				android:hint="@string/caption_hint_additem_title"
				android:layout_marginBottom="10dip"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:text="@string/caption_label_additem_url"
			/>
			<EditText
				android:id="@+id/txt_url"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="false"
				android:hint="@string/caption_hint_additem_url"
				android:layout_marginBottom="10dip"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:text="@string/caption_label_additem_tag"
			/>
			<Spinner
				android:id="@+id/spn_choosetag"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>

	</ScrollView>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="2dip"
		android:background="@android:drawable/bottom_bar">
		<Button
			android:id="@+id/btn_ok"
			android:text="@string/caption_button_ok"
		    android:layout_height="fill_parent"
		    android:layout_width="0dip"
		    android:layout_weight="1"
		    android:focusable="true"
		/>
		<Button
			android:id="@+id/btn_cancel"
			android:text="@string/caption_button_cancel"
		    android:layout_height="fill_parent"
		    android:layout_width="0dip"
		    android:layout_weight="1"
		    android:focusable="true"
		/>
	</LinearLayout>

</LinearLayout>
